# OldOnesSay

./: LICENSE  README.md  loopones.sh  pyproject.toml
oldones_say/: bubble.py  cli.py  colors.py  quotes.py
oldones_say/gods/: __init__.py  azathoth.py  cthulhu.py  dagon.py  hastur.py  nyarlathotep.py  shub_niggurath.py  yog_sothoth.py
